# alcextra

./: .gitignore  Makefile  README.md
SDL-1.2.14/src/video/: SDL_video.c
aalib-1.4.0/: ANNOUNCE  ChangeLog  INSTALL  Makefile.am  Makefile.in  NEWS  README.OS2  aalib-config.in  aalib.lsm  acconfig.h  aclocal.m4  configure  configure.in  mkinstalldirs  texinfo.tex
aalib-1.4.0/doc/: Makefile.am  Makefile.in  aalib.info  aalib.info-1  aalib.info-2  aalib.info-3  aalib.texinfo  reference.texinfo
aalib-1.4.0/man/: Makefile.am  Makefile.in  aa_attrs.3  aa_autoinit.3  aa_autoinitkbd.3  aa_autoinitmouse.3  aa_close.3  aa_createedit.3  aa_currentfont.3  aa_defparams.3  aa_defrenderparams.3  aa_displayrecommended.3  aa_dithernames.3  aa_drivers.3  aa_edit.3  aa_editkey.3  aa_fastrender.3  aa_fonts.3  aa_formats.3  aa_getevent.3  aa_getkey.3  aa_getmouse.3  aa_gotoxy.3  aa_help.3  aa_hidecursor.3  aa_hidemouse.3  aa_image.3  aa_imgheight.3  aa_imgwidth.3  aa_init.3  aa_initkbd.3  aa_initmouse.3  aa_kbddrivers.3  aa_kbdrecommended.3  aa_mmheight.3  aa_mmwidth.3  aa_mousedrivers.3  aa_mouserecommended.3  aa_parseoptions.3  aa_printf.3  (+26 more)
aalib-1.4.0/src/: Makefile.am  Makefile.dos  Makefile.in  Makefile.os2  aaattrs.c  aacurkbd.c  aacurmou.c  aacurrfnt.c  aacurses.c  aados.c  aadoskbd.c  aadosmou.c  aaedit.c  aafastre.c  aafire.c  aaflush.c  aafont.c  aafonts.c  aagpm.c  aahelp.c  aaimage.c  aaimgheight.c  aaimgwidth.c  aain.c  aainfo.c  aaint.h  aakbdreg.c  aalib.c  aalib.h  aalinux.c  aalinuxkbd.c  aamem.c  aamktabl.c  aammheight.c  aammwidth.c  aamoureg.c  aaos2.c  aaos2kbd.c  aaos2mou.c  aaout.c  (+34 more)
giflib-5.0.0/: Makefile.am  Makefile.in  NEWS  aclocal.m4  build.asc  configure  configure.ac  history.asc
giflib-5.0.0/doc/: Makefile.am  Makefile.in  gif_lib.xml  gifinter.1  gifinter.xml  intro.xml
giflib-5.0.0/lib/: Makefile.am  Makefile.in
giflib-5.0.0/pic/: Makefile.am  Makefile.in
giflib-5.0.0/tests/: makefile
giflib-5.0.0/util/: Makefile.am  Makefile.in  gifinter.c  gifinto.c
install/usr/include/: gmp.h
install/usr/include/ncurses/: curses.h  term.h
install/usr/lib/: charset.alias
libwebp-0.1.3/: configure
physfs/: CMakeLists.txt
physfs/.hg/: branchheads.cache  dirstate  hgrc
physfs/.hg/store/: 00changelog.i  00manifest.d  00manifest.i  fncache  undo
physfs/.hg/store/data/: .cvsignore.i  .hgignore.i  .hgtags.i  _c_h_a_n_g_e_l_o_g.i  _c_h_a_n_g_e_l_o_g.txt.i  _c_make_lists.txt.i  _c_r_e_d_i_t_s.i  _c_r_e_d_i_t_s.txt.i  _c_w_projects.sit.d  _c_w_projects.sit.i  _c_w_projects.sitx.i  _doxyfile.i  _i_n_s_t_a_l_l.i  _i_n_s_t_a_l_l.txt.i  _l_i_c_e_n_s_e.i  _l_i_c_e_n_s_e.txt.i  _makefile.am.i  _makefile.am.newautomake.i  _makefile.am.oldautomake.i  _makefile.i  _r_e_a_d_m_e.txt.i  _t_o_d_o.i  _t_o_d_o.txt.i  _visual_c.zip.d  _visual_c.zip.i  acconfig.h.i  bootstrap.i  configure.in.i  dir.c.i  makeos2.cmd.i  physfs.c.d  physfs.c.i  physfs.dsp.i  physfs.h.i  physfs.rc.i  physfs.spec.i  physfs.spec.in.i  physfs.vcproj.i  physfs__byteorder.c.i  physfs__casefolding.h.i  (+10 more)
physfs/.hg/store/data/_p_b_projects/: _r_e_a_d_m_e.txt.i  mkpbprojects.csh.i  uninstall.csh.i
physfs/.hg/store/data/archivers/: .cvsignore.i  _makefile.am.i  dir.c.i  grp.c.i  hog.c.i  lzma.c.i  mix.c.i  mvl.c.i  qpak.c.i  unzip.c.i  unzip.h.i  wad.c.i  zip.c.i
physfs/.hg/store/data/debian/: changelog.i  control.i  copyright.i  docs.i  files.i  libphysfs0-dev.dirs.i  libphysfs0-dev.doc-base.i  libphysfs0-dev.files.i  libphysfs0-dev.postinst.debhelper.i  libphysfs0-dev.prerm.debhelper.i  libphysfs0.dirs.i  libphysfs0.files.i  libphysfs0.postinst.debhelper.i  libphysfs0.postrm.debhelper.i  libphysfs0.substvars.i  postinst.i  postrm.i  preinst.i  prerm.i  rules.i  shlibs.local.i
physfs/.hg/store/data/docs/: _c_h_a_n_g_e_l_o_g.txt.i  _c_r_e_d_i_t_s.txt.i  _doxyfile.i  _i_n_s_t_a_l_l.txt.i  _t_o_d_o.txt.i
physfs/.hg/store/data/extras/: .cvsignore.i  _makefile.am.i  abs-file.h.i  casefolding.txt.i  globbing.c.i  globbing.h.i  ignorecase.c.i  ignorecase.h.i  makecasefoldhashtable.pl.i  makedist.sh.i  physfs-swig.i.i  physfshttpd.c.i  physfsrwops.c.i  physfsrwops.h.i  physfsunpack.c.i  selfextract.c.i  uninstall.sh.i
physfs/.hg/store/data/lzma/: 7z_alloc.h.i  7z_buffer.c.i  7z_buffer.h.i  7z_c.txt.i  7z_crc.c.i  7z_crc.h.i  7z_decode.c.i  7z_decode.h.i  7z_extract.c.i  7z_extract.h.i  7z_format.txt.i  7z_header.c.i  7z_header.h.i  7z_in.c.i  7z_in.h.i  7z_item.c.i  7z_item.h.i  7z_method_i_d.c.i  7z_method_i_d.h.i  7z_types.h.i  _l_g_p_l.txt.i  _l_z_m_a-_l_i_c_e_n_s_e.txt.i  _lzma_decode.c.i  _lzma_decode.h.i  _lzma_state_decode.c.i  _lzma_state_decode.h.i  _lzma_types.h.i  _makefile.am.i  _methods.txt.i  history.txt.i  lzma.exe.i  lzma.txt.i
physfs/.hg/store/data/platform/: .cvsignore.i  _makefile.am.i  beos.cpp.i  macclassic.c.i  macosx.c.i  os2.c.i  pocketpc.c.i  posix.c.i  skeleton.c.i  unix.c.i  win32.c.i  windows.c.i
physfs/.hg/store/data/src/: archiver__dir.c.i  archiver__grp.c.i  archiver__hog.c.i  archiver__iso9660.c.i  archiver__lzma.c.i  archiver__mvl.c.i  archiver__qpak.c.i  archiver__unpacked.c.i  archiver__wad.c.i  archiver__zip.c.i  physfs.c.i  physfs.h.i  physfs__byteorder.c.i  physfs__casefolding.h.i  physfs__internal.h.i  physfs__platforms.h.i  physfs__unicode.c.i  platform__beos.cpp.i  platform__macosx.c.i  platform__os2.c.i  platform__pocketpc.c.i  platform__posix.c.i  platform__unix.c.i  platform__windows.c.i
physfs/.hg/store/data/test/: .cvsignore.i  _makefile.am.i  test__physfs.c.i  test__physfs.pl.i  test__physfs.rb.i  wxtest__physfs.cpp.i
physfs/.hg/store/data/zlib121/: .cvsignore.i  _makefile.am.i  adler32.c.i  compress.c.i  crc32.c.i  crc32.h.i  deflate.c.i  deflate.h.i  gzio.c.i  infback.c.i  inffast.c.i  inffast.h.i  inffixed.h.i  inflate.c.i  inflate.h.i  inftrees.c.i  inftrees.h.i  trees.c.i  trees.h.i  uncompr.c.i  zconf.h.i  zlib.h.i  zutil.c.i  zutil.h.i
physfs/.hg/store/data/zlib122/: _makefile.am.i  adler32.c.i  compress.c.i  crc32.c.i  crc32.h.i  deflate.c.i  gzio.c.i  (+16 more)
physfs/src/: physfs.c
protobuf-2.4.1/flash/: example.cpp
readline-6.2/: Makefile.in
(+916 files in other folders)
